--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme by <a href="https://github.com/QiaoBang/QiaoBang.github.io">GitHub</a> |
+                    Powered by <a href="https://github.com/QiaoBang/QiaoBang.github.io">GitHub</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
