--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,11 +73,22 @@
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
                     Powered by <a href="https://github.com/QiaoBang/QiaoBang.github.io">GitHub</a> |
-                    <iframe
+                    <!-- 访客数 -->
+<i class="fa fa-user"></i>
+<span id="busuanzi_container_site_uv">
+    <span id="busuanzi_value_site_uv"></span>
+</span>
+
+<!-- 总浏览量 -->
+<i class="fa fa-eye"></i>
+<span id="busuanzi_container_site_pv">
+    <span id="busuanzi_value_site_pv"></span>
+</span>
+                 <!--    <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
                         src="https://ghbtns.com/github-btn.html?user=qiaobang&repo=qiaobang.github.io&type=star&count=true" >
-                    </iframe>
+                    </iframe> -->
                 </p>
             </div>
         </div>
