--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -86,31 +86,28 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
+  <!-- Gitalk 评论 start  -->
+                {% if site.gitalk.enable %}
+                <!-- Gitalk link  -->
+                <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+                <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
+                <div id="gitalk-container"></div>
+                    <script type="text/javascript">
+                    var gitalk = new Gitalk({
+                    clientID: '9098c200b2b7bd7c96f0',
+                    clientSecret: '18d4492f39d344a7fad9104c8b3e862adce68eae',
+                    repo: 'QiaoBang.github.io',
+                    owner: 'QiaoBang',
+                    admin: ['QiaoBang'],
+                    id: window.location.pathname,
+                    });
+                    gitalk.render('gitalk-container');
+                </script>
+                {% endif %}
+                <!-- Gitalk end -->
   
-<!-- Gitalk 评论 start  -->
-{% if site.gitalk.enable %}
-<!-- Link Gitalk 的支持文件  -->
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
-<div id="gitalk-container"></div>
-    <script type="text/javascript">
-    var gitalk = new Gitalk({
-
-    // gitalk的主要参数
-        clientID: `Github Application clientID`,
-        clientSecret: `Github Application clientSecret`,
-        repo: `存储你评论 issue 的 Github 仓库名`,
-        owner: 'Github 用户名',
-        admin: ['Github 用户名'],
-        id: '页面的唯一标识，gitalk会根据这个标识自动创建的issue的标签',
-    
-    });
-    gitalk.render('gitalk-container');
-</script>
-{% endif %}
-<!-- Gitalk end -->
                 {% if site.disqus.enable %}
                 <!-- disqus 评论框 start -->
                 <div class="comment">
