--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -25,6 +25,7 @@ layout: default
         .navbar-custom .navbar-brand,
         .navbar-custom .navbar-brand:hover {color:#777;}
         .navbar-default .navbar-toggle .icon-bar {background-color:#777;}
+
     {% endif %}
 </style>
 <header class="intro-header" >
@@ -63,7 +64,7 @@ layout: default
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1 ">
 
-                {{ content }}
+				{{ content }}
 
                 <hr style="visibility: hidden;">
 
@@ -86,7 +87,8 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
-  <!-- Gitalk 评论 start  -->
+
+                <!-- Gitalk 评论 start  -->
                 {% if site.gitalk.enable %}
                 <!-- Gitalk link  -->
                 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
@@ -95,18 +97,17 @@ layout: default
                 <div id="gitalk-container"></div>
                     <script type="text/javascript">
                     var gitalk = new Gitalk({
-                    clientID: '9098c200b2b7bd7c96f0',
-                    clientSecret: '18d4492f39d344a7fad9104c8b3e862adce68eae',
-                    repo: 'QiaoBang.github.io',
-                    owner: 'QiaoBang',
-                    admin: ['QiaoBang'],
+                    clientID: '{{site.gitalk.clientID}}',
+                    clientSecret: '{{site.gitalk.clientSecret}}',
+                    repo: '{{site.gitalk.repo}}',
+                    owner: '{{site.gitalk.owner}}',
+                    admin: ['{{site.gitalk.admin}}'],
                     id: window.location.pathname,
                     });
                     gitalk.render('gitalk-container');
                 </script>
                 {% endif %}
                 <!-- Gitalk end -->
-  
 
                 {% if site.disqus.enable %}
                 <!-- disqus 评论框 start -->
@@ -189,6 +190,7 @@ layout: default
     var disqus_shortname = "{{site.disqus.username}}";
     var disqus_identifier = "{{page.id}}";
     var disqus_url = "{{site.url}}{{page.url}}";
+
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
