--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -124,10 +124,10 @@
                     </iframe> -->
                     
                     <!-- add count by Jasmineooo -->
-                    <i class="fa fa-user"></i><span id="busuanzi_container_site_uv">&nbsp;&nbsp;
-                    <span id="busuanzi_value_site_uv"></span>&nbsp;&nbsp;
+                    <i class="fa fa-user"></i><span id="busuanzi_container_site_uv"><!-- &nbsp;&nbsp; -->
+                    <span id="busuanzi_value_site_uv"></span><!-- &nbsp;&nbsp; -->
                     </span>
-                    <i class="fa fa-eye"></i><span id="busuanzi_container_site_pv">&nbsp;&nbsp;
+                    <i class="fa fa-eye"></i><span id="busuanzi_container_site_pv"><!-- &nbsp;&nbsp; -->
                     <span id="busuanzi_value_site_pv"></span>
                     </span>
 
