--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -116,7 +116,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="{{ site.github_repo }}">GitHub</a> &nbsp;|&nbsp;
+                    Powered by @非刀尺&nbsp;|&nbsp;
                     <!-- <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
